policies/network-policy-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress-egress
  namespace: cap
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
