policies/network-policy-media-to-proxy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-media-server-to-customer-egress-proxy
  namespace: cap
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: media-server
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: customer-egress
          podSelector:
            matchLabels:
              app.kubernetes.io/name: customer-egress-proxy
      ports:
        - protocol: TCP
          port: 8080
