policies/network-policy-minio-setup-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-minio-setup-to-minio
  namespace: cap
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: minio-setup
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: minio
      ports:
        - protocol: TCP
          port: 9000
