policies/network-policy-minio-setup-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-minio-setup-ingress
  namespace: cap
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: minio
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: minio-setup
      ports:
        - protocol: TCP
          port: 9000
