policies/network-policy-mysql-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-web-to-mysql-ingress
  namespace: cap
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: mysql
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: web
      ports:
        - protocol: TCP
          port: 3306
