policies/network-policy-web-to-minio.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-web-to-minio
  namespace: cap
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: minio
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: web
      ports:
        - protocol: TCP
          port: 9000
